; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_mmu.c_xen_setup_mfn_list_list.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_mmu.c_xen_setup_mfn_list_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@HYPERVISOR_shared_info = common dso_local global %struct.TYPE_5__* null, align 8
@xen_dummy_shared_info = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@p2m_top_mfn_list = common dso_local global i32 0, align 4
@xen_max_p2m_pfn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xen_setup_mfn_list_list() #0 {
  %1 = load %struct.TYPE_5__*, %struct.TYPE_5__** @HYPERVISOR_shared_info, align 8
  %2 = icmp eq %struct.TYPE_5__* %1, @xen_dummy_shared_info
  %3 = zext i1 %2 to i32
  %4 = call i32 @BUG_ON(i32 %3)
  %5 = load i32, i32* @p2m_top_mfn_list, align 4
  %6 = call i32 @virt_to_mfn(i32 %5)
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** @HYPERVISOR_shared_info, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  store i32 %6, i32* %9, align 4
  %10 = load i32, i32* @xen_max_p2m_pfn, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** @HYPERVISOR_shared_info, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @virt_to_mfn(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
